# LinAlgPlayground

./: .gitignore  README.md  vercel.json
api/: index.py
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/chapters/: __init__.py  ch1.py  ch2.py  ch3.py  ch4.py  ch5.py  ch6.py  ch7.py  ch8.py  ch9.py
backend/app/chapters/: __init__.py
backend/app/chapters/ch1/: __init__.py  linear_system.py  types.py
backend/app/chapters/ch2/: __init__.py  linalg2.py  types.py
backend/app/chapters/ch3/: __init__.py  subspaces.py  types.py
backend/app/core/: __init__.py  config.py  cors.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: index.css
frontend/src/app/: routes.tsx
frontend/src/app/api/: client.ts  types.ts
frontend/src/app/config/: chapters.ts
frontend/src/app/layout/: Header.tsx  RootLayout.tsx  Sidebar.tsx
frontend/src/chapters/ch1/: api.ts  index.ts  types.ts
frontend/src/chapters/ch1/ui/: Chapter1Home.tsx  MatrixDisplay.tsx  MatrixEditor.tsx  (+4 more)
frontend/src/chapters/ch2/: api.ts  index.ts  types.ts
frontend/src/chapters/ch3/: api.ts  index.ts  types.ts
frontend/src/chapters/ch4/: index.ts
frontend/src/chapters/ch5/: index.ts
frontend/src/chapters/ch6/: index.ts
frontend/src/chapters/ch7/: index.ts
frontend/src/chapters/ch8/: index.ts
frontend/src/chapters/ch9/: index.ts
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  tabs.tsx
frontend/src/pages/: ChapterPage.tsx  LandingPage.tsx
(+18 files in other folders)
